<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="fill_vertical"
    android:orientation="vertical" >

	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="fill_vertical"
		android:orientation="horizontal"
		android:paddingTop="20dp"
		android:paddingBottom="20dp"
		>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/ic_launcher" />

		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="fill_vertical"
			android:orientation="vertical"
			android:padding="5dp"
			>

			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:textAppearance="?android:attr/textAppearanceLarge"
				/>
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="fill_vertical"
				android:orientation="horizontal"
				>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_version_prefix"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:paddingRight="1sp"
					/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_version"
					android:textAppearance="?android:attr/textAppearanceSmall"
					/>


				
			</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_copyright"
				android:textAppearance="?android:attr/textAppearanceSmall"
				/>

		</LinearLayout>
	</LinearLayout>


	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_license"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:autoLink="web"
		/>

</LinearLayout>
