<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/advanced_search_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_description"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        />
    <CheckBox
        android:id="@+id/advanced_search_include_system_apps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_include_system_apps"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout 
            android:id="@+id/advanced_search_button_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true"
            >
            <Button
            android:id="@+id/advanced_search_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/advanced_search_search"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
        </LinearLayout>
        <ListView
            android:id="@+id/advanced_search_list"
            android:layout_alignParentTop="true"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" 
            android:layout_above="@id/advanced_search_button_wrapper"
            />
    </RelativeLayout>
</LinearLayout>